--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --entry ./src/js/app.js --output ./dist/bundle.js --mode development",
+    "build": "webpack-dev-server --entry ./src/js/app.js --output-filename ./dist/bundle.js --mode development",
     "build:prod": "webpack --entry ./src/js/app.js --output ./dist/bundle.js -p "
   },
   "repository": {
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/venkat749/webpack-basics#readme",
   "dependencies": {
-    "webpack": "^4.31.0"
+    "webpack": "^4.31.0",
+    "webpack-dev-server": "^3.4.1"
   },
   "devDependencies": {
     "webpack-cli": "^3.3.2"
