--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack-dev-server --entry ./src/js/app.js --output-filename ./dist/bundle.js --mode development",
-    "build:prod": "webpack --entry ./src/js/app.js --output ./dist/bundle.js -p "
+    "build": "webpack-dev-server --mode development",
+    "build:prod": "webpack -p "
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/venkat749/webpack-basics#readme",
   "dependencies": {
-    "webpack": "^4.31.0",
-    "webpack-dev-server": "^3.4.1"
+    "webpack": "^4.31.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.2"
+    "css-loader": "^2.1.1",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1"
   }
 }
